--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   loading: ^1.0.2
   flutter_google_places: ^0.2.4
   shimmer:
+  flutter_rating_bar:
 
 dev_dependencies:
   flutter_test:
